# qt-downloader

./: .gitignore  CMakeLists.txt  README.md  filedownloader.cpp  filedownloader.h  mainwindow.cpp  mainwindow.h
.lh/: README.md.json  mainwindow.ui.json
include/: downloadhistory.h  filedownloader.h  mainwindow.h  mainwindowmodel.h
src/: downloadhistory.cpp  filedownloader.cpp  mainwindow.cpp  mainwindow.ui  mainwindowmodel.cpp
